# openai-realtime-api-demo

./: .env.example  .gitignore  README.md  Speech2Speech.py  pyproject.toml
